--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "firebase": "^9.10.0",
     "next": "12.3.1",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-lottie": "^1.2.3",
-    "react-multi-carousel": "^2.8.2"
+    "react-multi-carousel": "^2.8.2",
+    "react-spinners": "^0.13.6"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.21",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
