--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "firebase": "^9.10.0",
+    "framer-motion": "^7.6.1",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
