--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  
   "dependencies": {
     "firebase": "^9.10.0",
     "framer-motion": "^7.6.1",
@@ -16,6 +15,7 @@
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
+    "react-calendly": "^4.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.4.0",
