--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-intersection-observer": "^9.4.0",
     "react-lottie": "^1.2.3",
     "react-multi-carousel": "^2.8.2",
+    "react-scroll-to-top": "^3.0.0",
     "react-spinners": "^0.13.6"
   },
   "devDependencies": {
